--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,9 @@ HOST=0.0.0.0
 NODE_ENV=development
 APP_KEY=Q5a2zZJEzlLqIBRQbhOIX0TuLp0MEkbi
 DRIVE_DISK=local
+DB_CONNECTION=mysql
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_USER=root
+MYSQL_PASSWORD=root
+MYSQL_DB_NAME=adonis_db
